Z-index fix

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ header{
     color: #000;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 3;
 }
 .carousel img{
     height: 600px;
